Fix spacing

--- a/main.css
+++ b/main.css
@@ -103,6 +103,7 @@ h3{
   margin: 20px 0 0;
   padding: 0 0 10px;
   text-indent: 5px;
+  margin-bottom: 1ex;
 }
 
 @media print{
